--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <script type="text/javascript" src="https://raw.github.com/eligrey/FileSaver.js/master/FileSaver.js"></script>
+  <script type="text/javascript">
+    var blob = new Blob(["Hello, world!"], {type: "text/plain;charset=utf-8"});
+    saveAs(blob, "hello world.txt");
+  </script>
+</head>
 <body>
 <h1>Nothing here yet!</h1>
 </body>
