--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <h1>Nothing here yet!</h1>
-<button>http://mytasks.github.io/savetest.js</button>
+<FORM METHOD="LINK" ACTION="mytasks.github.io/savetest.js">
+<INPUT TYPE="submit" VALUE="click me pls">
+</FORM>
 </body>
 </html>
