--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Nothing here yet!</h1>
-<FORM METHOD="LINK" ACTION="mytasks.github.io/savetest.js">
+<FORM METHOD="LINK" ACTION="http://mytasks.github.io/savetest.js">
 <INPUT TYPE="submit" VALUE="click me pls">
 </FORM>
 </body>
