started work on specific span and div selection

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MyTasks</title>
+  <title>MyTasks v0.0.1 Alpha</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Nothing here yet!</h1>
-<FORM METHOD="LINK" ACTION="http://mytasks.github.io/savetest.js">
-<INPUT TYPE="submit" VALUE="click me pls">
-</FORM>
+<div id="wrapper">
+  <div>
+    <span>grey due date</span>
+    <span>task</span>
+  </div>
+</div>
 </body>
 </html>
