--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div id="wrapper">
   <div>
-    <span>grey due date</span>
+    <span>grey due date</span><br />
     <span>task</span>
   </div>
 </div>
