changed span to p, added break

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <div id="wrapper">
   <div>
-    <span>grey due date</span><br />
-    <span>task</span>
+    <p>grey due date</p><br />
+    <p>task</p>
   </div>
 </div>
 </body>
