reverted p to span

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <div id="wrapper">
   <div>
-    <p>grey due date</p>
-    <p>task</p>
+    <span>grey due date</span><br />
+    <span>task</span>
   </div>
 </div>
 </body>
