added new font, Alef

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>MyTasks v0.0.1 Alpha</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href='http://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div id="wrapper">
