--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <span>grey due date</span><br />
     <span>task</span>
   </div>
+  <div>
+    <span>1/29/14</span><br />
+    <span>Humanities Homework</span>
+  </div>
 </div>
 </body>
 </html>
