created class tag

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
 <div id="wrapper">
   <div>
-    <span>grey due date</span><br />
-    <span>task</span>
+    <span>1/30/14</span>&nbsp;<span>#HumCadigan</span><br />
+    <span>Blah.</span>
   </div>
   <div>
-    <span>1/29/14</span><br />
-    <span>Humanities Homework</span>
+    <span>1/29/14</span>&nbsp;<span>#HumVaughan</span><br />
+    <span>Study for your grammar test.  Make any necessary edits to your short story.</span>
   </div>
 </div>
 </body>
