continued applying class-specific color rules

--- a/index.html
+++ b/index.html
@@ -13,13 +13,29 @@
     <span>Study for your grammar test.  Make any necessary edits to your short story.</span>
   </div>
   <div>
-    <span>1/30/14</span>&nbsp;<span>#HumCadigan</span><br />
+    <span>1/30/14</span>&nbsp;<span>#Span</span><br />
+    <span>Blah.</span>
+  </div>
+  <div>
+    <span>1/30/14</span>&nbsp;<span>#Math</span><br />
+    <span>Blah.</span>
+  </div>
+  <div>
+    <span>1/30/14</span>&nbsp;<span>#Sci</span><br />
+    <span>Blah.</span>
+  </div>
+  <div>
+    <span>1/30/14</span>&nbsp;<span>#Lat</span><br />
     <span>Blah.</span>
   </div>
 </div>
 
 <script>
 $( "span:contains('#Hum')" ).css( "color", "#4B62E3" );
+$( "span:contains('#Span')" ).css( "color", "#E87020" );
+$( "span:contains('#Math')" ).css( "color", "#55BF47" );
+$( "span:contains('#Sci')" ).css( "color", "#EB9721" );
+$( "span:contains('#Lat')" ).css( "color", "#E6E6E6" );
 </script>
 
 </body>
