modified latin color slightly

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ $( "span:contains('#Hum')" ).css( "color", "#4B62E3" );
 $( "span:contains('#Span')" ).css( "color", "#E87020" );
 $( "span:contains('#Math')" ).css( "color", "#55BF47" );
 $( "span:contains('#Sci')" ).css( "color", "#EB9721" );
-$( "span:contains('#Lat')" ).css( "color", "#E6E6E6" );
+$( "span:contains('#Lat')" ).css( "color", "#F7F7F7" );
 </script>
 
 </body>
