--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href='http://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <link rel="shortcut icon" href="http://www.iconj.com/ico/a/8/a8dr4op713.ico" type="image/x-icon" />
 </head>
 <body>
 <div id="wrapper">
