adding WIP message, added real content

--- a/index.html
+++ b/index.html
@@ -9,25 +9,18 @@
 </head>
 <body>
 <div id="wrapper">
+  <h1 style="margin: 0px auto">WARNING! Do not rely on this just yet as it is a Work In Progress! :)</h1>
   <div>
-    <span>1/29/14</span>&nbsp;<span>#HumVaughan</span><br />
+    <span>1/30/14</span>&nbsp;<span>#MathKramer</span><br />
+    <span>Study for Chapter 12 test.</span>
+  </div>
+  <div>
+    <span>1/30/14</span>&nbsp;<span>#HumVaughan</span><br />
     <span>Study for your grammar test.  Make any necessary edits to your short story.</span>
   </div>
   <div>
-    <span>1/30/14</span>&nbsp;<span>#Span</span><br />
-    <span>Blah.</span>
-  </div>
-  <div>
-    <span>1/30/14</span>&nbsp;<span>#Math</span><br />
-    <span>Blah.</span>
-  </div>
-  <div>
-    <span>1/30/14</span>&nbsp;<span>#Sci</span><br />
-    <span>Blah.</span>
-  </div>
-  <div>
-    <span>1/30/14</span>&nbsp;<span>#Lat</span><br />
-    <span>Blah.</span>
+    <span>1/31/14</span>&nbsp;<span>#Latin</span><br />
+    <span>January project due!</span>
   </div>
 </div>
 
