--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MyTasks v0.0.1 Alpha</title>
+  <title>MyTasks v0.0.1</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href='http://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
@@ -13,6 +13,10 @@
   <div>
     <span>1/30/14</span>&nbsp;<span>#MathKramer</span><br />
     <span>Study for Chapter 12 test.</span>
+  </div>
+  <div>
+    <span>1/30/14</span>&nbsp;<span>#MathC-W</span><br />
+    <span>Textbook: pg 524 #7-24 odd, #24-29 all; pg 530 #9-31 odd, #34; pg 536 #11-25 odd, #35, #39-46 all</span>
   </div>
   <div>
     <span>1/30/14</span>&nbsp;<span>#HumVaughan</span><br />
