--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
 <div id="wrapper">
-  <h1 style="margin: 0px auto">WARNING! Do not rely on this just yet as it is a Work In Progress! :)</h1>
+  <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
   <div>
+  <div>
+    <span>1/30/14</span>&nbsp;<span>#HumCadigan</span><br />
+    <span>Read and Reflect on Chapters 7 & 8 of Frederick Douglass in Reflection Journal.</span>
+  </div>
     <span>1/30/14</span>&nbsp;<span>#MathKramer</span><br />
     <span>Study for Chapter 12 test.</span>
   </div>
