--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <span>1/30/14</span>&nbsp;<span>#HumCadigan</span><br />
     <span>Read and Reflect on Chapters 7 & 8 of Frederick Douglass in Reflection Journal.</span>
   </div>
+  <div>
     <span>1/30/14</span>&nbsp;<span>#MathKramer</span><br />
     <span>Study for Chapter 12 test.</span>
   </div>
