--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <span>Study for Chapter 12 test.</span>
   </div>
   <div>
-    <span>1/30/14</span>&nbsp;<span>#MathC-W</span><br />
+    <span>1/30/14</span>&nbsp;<span>#MathCW</span><br />
     <span>Textbook: pg 524 #7-24 odd, #24-29 all; pg 530 #9-31 odd, #34; pg 536 #11-25 odd, #35, #39-46 all</span>
   </div>
   <div>
