modified class colors

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <div id="wrapper">
   <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
   <div>
-    <span>1/30/14</span>&nbsp;<span>#HumCadigan</span><br />
-    <span>Read and Reflect on Chapters 7 & 8 of Frederick Douglass in Reflection Journal.</span>
-  </div>
-  <div>
     <span>1/30/14</span>&nbsp;<span>#MathKramer</span><br />
     <span>Study for Chapter 12 test.</span>
   </div>
   <div>
     <span>1/30/14</span>&nbsp;<span>#MathCW</span><br />
     <span>Textbook: pg 524 #7-24 odd, #24-29 all; pg 530 #9-31 odd, #34; pg 536 #11-25 odd, #35, #39-46 all</span>
+  </div>
+  <div>
+    <span>1/30/14</span>&nbsp;<span>#HumCadigan</span><br />
+    <span>Read and Reflect on Chapters 7 & 8 of Frederick Douglass in Reflection Journal.</span>
   </div>
   <div>
     <span>1/30/14</span>&nbsp;<span>#HumVaughan</span><br />
@@ -33,9 +33,11 @@
 </div>
 
 <script>
-$( "span:contains('#Hum')" ).css( "color", "#4B62E3" );
-$( "span:contains('#Span')" ).css( "color", "#E87020" );
-$( "span:contains('#Math')" ).css( "color", "#55BF47" );
+$( "span:contains('#HumVaughan')" ).css( "color", "#4B8AE3" );
+$( "span:contains('#HumCadigan')" ).css( "color", "#4343E6" );
+$( "span:contains('#Span')" ).css( "color", "#EB3921" );
+$( "span:contains('#MathKramer')" ).css( "color", "#7F2DE3" );
+$( "span:contains('#MathCW')" ).css( "color", "#369E19" );
 $( "span:contains('#Sci')" ).css( "color", "#EB9721" );
 $( "span:contains('#Lat')" ).css( "color", "#8A8A8A" );
 </script>
