modified class colors

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 $( "span:contains('#HumVaughan')" ).css( "color", "#4B8AE3" );
 $( "span:contains('#HumCadigan')" ).css( "color", "#4343E6" );
 $( "span:contains('#Span')" ).css( "color", "#EB3921" );
-$( "span:contains('#MathKramer')" ).css( "color", "#7F2DE3" );
+$( "span:contains('#MathKramer')" ).css( "color", "#C321EB" );
 $( "span:contains('#MathCW')" ).css( "color", "#369E19" );
 $( "span:contains('#Sci')" ).css( "color", "#EB9721" );
 $( "span:contains('#Lat')" ).css( "color", "#8A8A8A" );
