--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+
+TODO:
+- Use JS to create checkmark boxes (that don't default on refresh) next to each entry.  Use custom-style boxes?
+
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
