Added spanish homework from the previous day

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 TODO:
 - Use JS to create checkmark boxes (that don't default on refresh) next to each entry.  Use custom-style boxes?
+- Infinite scrolling additions
 
 -->
 
@@ -17,6 +18,10 @@ TODO:
 <body>
 <div id="wrapper">
   <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
+<div>
+    <span>1/30/14</span>&nbsp;<span>#Span</span><br />
+    <span>Informal Writing Worksheet</span>
+  </div>
   <div>
     <span>1/30/14</span>&nbsp;<span>#MathKramer</span><br />
     <span>Study for Chapter 12 test.</span>
