--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 TODO:
 - Use JS to create checkmark boxes (that don't default on refresh) next to each entry.  Use custom-style boxes?
 - Infinite scrolling additions
+- Bold page numbers and question numbers
 
 -->
 
