added science homework

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@ TODO:
 <body>
 <div id="wrapper">
   <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
-<div>
+  <div>
+    <span>1/31/14</span>&nbsp;<span>#Sci</span><br />
+    <span>Choose the top 3 elements you want to create a 10min presentation on, later on. Only chemical symbols in your first or last name may be used.<br />Resource:<br /><a href="http://ptable.com">Ptable</a></span>
+  </div>
+  <div>
     <span>1/30/14</span>&nbsp;<span>#Span</span><br />
     <span>Informal Writing Worksheet</span>
   </div>
@@ -42,6 +46,10 @@ TODO:
   <div>
     <span>1/31/14</span>&nbsp;<span>#Latin</span><br />
     <span>January project due!</span>
+  </div>
+  <div>
+    <span>2/5/14</span>&nbsp;<span>#Sci</span><br />
+    <span>Final Due!</span>
   </div>
 </div>
 
