--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ TODO:
   <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
   <div>
     <span>1/31/14</span>&nbsp;<span>#Sci</span><br />
-    <span>Choose the top 3 elements you want to create a 10min presentation on, later on. Only chemical symbols in your first or last name may be used.<br />Resource:<br /><a href="http://ptable.com">Ptable</a></span>
+    <span>Choose the top 3 elements you want to create a 10min presentation on, later on. Only chemical symbols in your first or last name may be used.<br /><b>Resource:</b><br /><a href="http://ptable.com">Ptable</a></span>
   </div>
   <div>
     <span>1/30/14</span>&nbsp;<span>#Span</span><br />
