--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@ TODO:
     <span>1/31/14</span>&nbsp;<span>#Sci</span><br />
     <span>Choose the top 3 elements you want to create a 10min presentation on, later on. Only chemical symbols in your first or last name may be used.<br /><b>Resource:</b><br /><a href="http://ptable.com">Ptable</a></span>
   </div>
+   <div>
+    <span>1/31/14</span>&nbsp;<span>#HumCadigan</span><br />
+    <span>Prepare for Crisis #4</span>
+  </div>
+   <div>
+    <span>1/30/14</span>&nbsp;<span>#HumCadigan</span><br />
+    <span>Study WWW Lists 1-5</span>
+  </div>
   <div>
     <span>1/30/14</span>&nbsp;<span>#Span</span><br />
     <span>Informal Writing Worksheet</span>
@@ -34,10 +42,6 @@ TODO:
   <div>
     <span>1/30/14</span>&nbsp;<span>#MathCW</span><br />
     <span>Textbook: pg 524 #7-24 odd, #24-29 all; pg 530 #9-31 odd, #34; pg 536 #11-25 odd, #35, #39-46 all</span>
-  </div>
-  <div>
-    <span>1/30/14</span>&nbsp;<span>#HumCadigan</span><br />
-    <span>Read and Reflect on Chapters 7 & 8 of Frederick Douglass in Reflection Journal.</span>
   </div>
   <div>
     <span>1/30/14</span>&nbsp;<span>#HumVaughan</span><br />
