--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@ TODO:
 <body>
 <div id="wrapper">
   <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
+  
+  <div>
+    <span>1/31/14</span>&nbsp;<span>#HumVaughan</span><br />
+    <span>Outline Essay</span>
+  </div>
   <div>
     <span>1/31/14</span>&nbsp;<span>#Sci</span><br />
     <span>Choose the top 3 elements you want to create a 10min presentation on, later on. Only chemical symbols in your first or last name may be used.<br /><b>Resource:</b><br /><a href="http://ptable.com">Ptable</a></span>
   </div>
    <div>
     <span>1/31/14</span>&nbsp;<span>#HumCadigan</span><br />
-    <span>Prepare for Crisis #4</span>
-  </div>
-   <div>
-    <span>1/30/14</span>&nbsp;<span>#HumCadigan</span><br />
-    <span>Study WWW Lists 1-5</span>
+    <span>Prepare for Crisis #4<br />Study WWW Lists 1-5</span>
   </div>
   <div>
     <span>1/30/14</span>&nbsp;<span>#Span</span><br />
