--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ TODO:
   <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
   
   <div>
+    <span>1/31/14</span>&nbsp;<span>#MathKramer</span><br />
+    <span>Practice 13.1 (all)</span>
+  </div>
+  <div>
     <span>1/31/14</span>&nbsp;<span>#HumVaughan</span><br />
     <span>Outline Essay</span>
   </div>
