--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ TODO:
   </div>
   <div>
     <span>1/31/14</span>&nbsp;<span>#Sci</span><br />
-    <span>Choose the top 3 elements you want to create a 10min presentation on, later on. Only chemical symbols in your first or last name may be used.<br /><b>Resource:</b><br /><a href="http://ptable.com">Ptable</a></span>
+    <span>Choose the top 3 elements you want to create a 10min presentation on, later on. Only chemical symbols in your first or last name may be used.<br /><b>Resource:</b><br /><a href="http://ptable.com" target="_blank">Ptable</a></span>
   </div>
    <div>
     <span>1/31/14</span>&nbsp;<span>#HumCadigan</span><br />
