--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@ jQuery.fn.highlight = function (str) {
     });
 };
 
+var dt_to = $.datepicker.formatDate('yy/mm/dd', new Date());
+
+document.write(dt_to);
+
 </script>
 
 </body>
