--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ TODO:
   <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
   
   <div>
+    <span>1/31/14</span>&nbsp;<span>#Span</span><br />
+    <span>Workbook 10.11-10.12</span>
+  </div>
+  <div>
     <span>1/31/14</span>&nbsp;<span>#MathKramer</span><br />
     <span>Practice 13.1 (all)</span>
   </div>
@@ -35,6 +39,22 @@ TODO:
    <div>
     <span>1/31/14</span>&nbsp;<span>#HumCadigan</span><br />
     <span>Prepare for Crisis #4<br />Study WWW Lists 1-5</span>
+  </div>
+  <div>
+    <span>1/30/14</span>&nbsp;<span>#Span</span><br />
+    <span>Informal Writing Worksheet</span>
+  </div>
+  <div>
+    <span>1/30/14</span>&nbsp;<span>#MathKramer</span><br />
+    <span>Study for Chapter 12 test.</span>
+  </div>
+  <div>
+    <span>1/30/14</span>&nbsp;<span>#MathCW</span><br />
+    <span>Textbook: pg 524 #7-24 odd, #24-29 all; pg 530 #9-31 odd, #34; pg 536 #11-25 odd, #35, #39-46 all</span>
+  </div>
+  <div>
+    <span>1/30/14</span>&nbsp;<span>#HumVaughan</span><br />
+    <span>Study for your grammar test.  Make any necessary edits to your short story.</span>
   </div>
   <div>
     <span>1/31/14</span>&nbsp;<span>#Latin</span><br />
