--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ TODO:
   
   <div>
     <span>1/31/14</span>&nbsp;<span>#Span</span><br />
-    <span>Workbook 10.11-10.12</span>
+    <span>W.B. 10.11-10.12</span>
   </div>
   <div>
     <span>1/31/14</span>&nbsp;<span>#MathKramer</span><br />
