--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ TODO:
   </div>
   <div>
     <span>1/31/14</span>&nbsp;<span>#MathKramer</span><br />
-    <span>Practice 13.1 (all)</span>
+    <span>Practice 13.1 hm(all)</span>
   </div>
   <div>
     <span>1/31/14</span>&nbsp;<span>#HumVaughan</span><br />
