--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ TODO:
   
   <div>
     <span>1/31/14</span>&nbsp;<span>#Span</span><br />
-    <span>WIP</span>
+    <span>W.B. 10.11-10.12</span>
   </div>
   <div>
     <span>1/31/14</span>&nbsp;<span>#MathKramer</span><br />
-    <span>Practice 13.1 hm(all)</span>
+    <span>Practice 13.1(all)</span>
   </div>
   <div>
     <span>1/31/14</span>&nbsp;<span>#HumVaughan</span><br />
