--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ TODO:
 </head>
 <body>
 <div id="wrapper">
-  <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
+  <h1 style="margin: 0px auto">Work in Progress. More will be added soon! :)</h1>
   
   <div>
     <span>1/31/14</span>&nbsp;<span>#Span</span><br />
