implemented smart checkbox script, adding them later

--- a/index.html
+++ b/index.html
@@ -67,13 +67,32 @@ TODO:
 </div>
 
 <script>
+
+$(document).ready(function() {
+
 $( "span:contains('#HumVaughan')" ).css( "color", "#4B8AE3" );
 $( "span:contains('#HumCadigan')" ).css( "color", "#4343E6" );
 $( "span:contains('#Span')" ).css( "color", "#EB3921" );
 $( "span:contains('#MathKramer')" ).css( "color", "#C321EB" );
 $( "span:contains('#MathCW')" ).css( "color", "#369E19" );
 $( "span:contains('#Sci')" ).css( "color", "#EB9721" );
-$( "span:contains('#Lat')" ).css( "color", "#8A8A8A" );
+$( "span:contains('#Lat')" ).css( "co
+lor", "#8A8A8A" );
+
+    $('form')
+    .delegate(':checkbox','change',function() {
+
+        var $this = $(this);
+
+        localStorage.setItem('checkbox' + $this.index('form :checkbox'),$this.attr('checked').toString());
+    })
+    .find(':checkbox')
+    .each(function(index) {
+
+        if(localStorage.getItem('checkbox' + index) === 'true') $(this).attr('checked',true);
+    });
+});
+
 
 </script>
 
