--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ TODO:
 </head>
 <body>
 <div id="wrapper">
-  <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
+  <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1> <form>test<input type="checkbox" /></form>
   
   <div>
     <span>1/31/14</span>&nbsp;<span>#Span</span><br />
@@ -68,16 +68,15 @@ TODO:
 
 <script>
 
-$(document).ready(function() {
-
 $( "span:contains('#HumVaughan')" ).css( "color", "#4B8AE3" );
 $( "span:contains('#HumCadigan')" ).css( "color", "#4343E6" );
 $( "span:contains('#Span')" ).css( "color", "#EB3921" );
 $( "span:contains('#MathKramer')" ).css( "color", "#C321EB" );
 $( "span:contains('#MathCW')" ).css( "color", "#369E19" );
 $( "span:contains('#Sci')" ).css( "color", "#EB9721" );
-$( "span:contains('#Lat')" ).css( "co
-lor", "#8A8A8A" );
+$( "span:contains('#Lat')" ).css( "color", "#8A8A8A" );
+
+$(document).ready(function() {
 
     $('form')
     .delegate(':checkbox','change',function() {
