--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ TODO:
   <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
   
   <div>
+    <span>1/31/14</span>&nbsp;<span>#Hum&nbsp;</span><br />
+    <span>Book Card!</span>
+  </div>
+  <div>
     <span>1/31/14</span>&nbsp;<span>#Span</span><br />
     <span>W.B. 10.11-10.12</span>
   </div>
@@ -70,6 +74,7 @@ TODO:
 
 $( "span:contains('#HumVaughan')" ).css( "color", "#4B8AE3" );
 $( "span:contains('#HumCadigan')" ).css( "color", "#4343E6" );
+$( "span:contains('#Hum&nbsp;')" ).css( "color", "#1F39E0" );
 $( "span:contains('#Span')" ).css( "color", "#EB3921" );
 $( "span:contains('#MathKramer')" ).css( "color", "#C321EB" );
 $( "span:contains('#MathCW')" ).css( "color", "#369E19" );
