--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ TODO:
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href='http://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+  <script src="https://raw.github.com/andris9/jStorage/master/jstorage.js"></script>
   <link rel="shortcut icon" href="http://www.iconj.com/ico/a/8/a8dr4op713.ico" type="image/x-icon" />
 </head>
 <body>
@@ -22,7 +25,7 @@ TODO:
   
   <div>
     <span>2/4/14</span>&nbsp;<span>#HumVaughan</span><br />
-    <span><a href="https://docs.google.com/a/sageschool.org/document/d/1pkiSGcBACSVqm_8MHqbAs5jn59oSs-5zoSa3wY1VC50/edit">HwDoc</a></span>
+    <span><a target="_blank" href="http://tiny.cc/humwork">HwDoc</a></span>
   </div>
   <div>
     <span>2/3/14</span>&nbsp;<span>#MathKramer</span><br />
