--- a/index.html
+++ b/index.html
@@ -1,98 +1,6 @@
-<!--
-
-TODO:
-- Use JS to create checkmark boxes (that don't default on refresh) next to each entry.  Use custom-style boxes?
-- Infinite scrolling additions
-- Bold page numbers and question numbers
-
--->
-
 <!DOCTYPE html>
 <html>
 <head>
-  <title>myTasks v0.0.1a</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link href='http://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
-  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-  <script src="https://raw.github.com/andris9/jStorage/master/jstorage.js"></script>
-  <link rel="shortcut icon" href="http://www.iconj.com/ico/a/8/a8dr4op713.ico" type="image/x-icon" />
+  <title>Out of Order. <a href="hwstack.github.io">Use hwStack</a></title>
 </head>
-<body>
-<div id="wrapper">
-  <h1 style="margin: 0px auto">Work in Progress. More will be added soon!</h1>
-  
-  <div>
-    <span>2/4/14</span>&nbsp;<span>#HumVaughan</span><br />
-    <span><a target="_blank" href="http://tiny.cc/humwork">HwDoc</a></span>
-  </div>
-  <div>
-    <span>2/3/14</span>&nbsp;<span>#MathKramer</span><br />
-    <span>Practice 13.2 (all)</span>
-  </div>
-  <div>
-    <span>1/31/14</span>&nbsp;<span>#Hum&nbsp;</span><br />
-    <span>Book Card!</span>
-  </div>
-  <div>
-    <span>1/31/14</span>&nbsp;<span>#Span</span><br />
-    <span>W.B. 10.11-10.12</span>
-  </div>
-  <div>
-    <span>1/31/14</span>&nbsp;<span>#MathKramer</span><br />
-    <span>Practice 13.1 (all)</span>
-  </div>
-  <div>
-    <span>1/31/14</span>&nbsp;<span>#HumVaughan</span><br />
-    <span>Outline Essay</span>
-  </div>
-  <div>
-    <span>1/31/14</span>&nbsp;<span>#Sci</span><br />
-    <span>Choose the top 3 elements you want to create a 10min presentation on, later on. Only chemical symbols in your first or last name may be used.<br /><b>Resource:</b><br /><a href="http://ptable.com" target="_blank">Ptable</a></span>
-  </div>
-   <div>
-    <span>1/31/14</span>&nbsp;<span>#HumCadigan</span><br />
-    <span>Prepare for Crisis #4<br />Study WWW Lists 1-5</span>
-  </div>
-  <div>
-    <span>1/30/14</span>&nbsp;<span>#Span</span><br />
-    <span>Informal Writing Worksheet</span>
-  </div>
-  <div>
-    <span>1/30/14</span>&nbsp;<span>#MathKramer</span><br />
-    <span>Study for Chapter 12 test.</span>
-  </div>
-  <div>
-    <span>1/30/14</span>&nbsp;<span>#MathCW</span><br />
-    <span>Textbook: pg 524 #7-24 odd, #24-29 all; pg 530 #9-31 odd, #34; pg 536 #11-25 odd, #35, #39-46 all</span>
-  </div>
-  <div>
-    <span>1/30/14</span>&nbsp;<span>#HumVaughan</span><br />
-    <span>Study for your grammar test.  Make any necessary edits to your short story.</span>
-  </div>
-  <div>
-    <span>1/31/14</span>&nbsp;<span>#Latin</span><br />
-    <span>January project due!</span>
-  </div>
-  <div>
-    <span>2/5/14</span>&nbsp;<span>#Sci</span><br />
-    <span>Final Due!</span>
-  </div>
-</div>
-
-<script>
-
-$( "span:contains('#HumVaughan')" ).css( "color", "#4B8AE3" );
-$( "span:contains('#HumCadigan')" ).css( "color", "#4343E6" );
-$( "span:contains('#Hum&nbsp;')" ).css( "color", "#1F39E0" );
-$( "span:contains('#Span')" ).css( "color", "#EB3921" );
-$( "span:contains('#MathKramer')" ).css( "color", "#C321EB" );
-$( "span:contains('#MathCW')" ).css( "color", "#369E19" );
-$( "span:contains('#Sci')" ).css( "color", "#EB9721" );
-$( "span:contains('#Lat')" ).css( "color", "#8A8A8A" );
-
-</script>
-
-</body>
 </html>
