--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Out of Order. <a href="hwstack.github.io">Use hwStack</a></title>
+  <title>Out of Order</title>
+  <p>Out of Order. <a href="hwstack.github.io">Use hwStack</a></p>
 </head>
 </html>
