--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head>
   <title>Out of Order</title>
-  <p>Out of Order. <a href="hwstack.github.io">Use hwStack</a></p>
+  <p>Out of Order. <a href="http://hwstack.github.io">Use hwStack</a></p>
 </head>
 </html>
