--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="refresh" content="0; url=http://hwstack.github.io" />
   <title>Out of Order</title>
   <p>Out of Order. <a href="http://hwstack.github.io">Use hwStack</a></p>
 </head>
